<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dialogImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_glasscon2">

            </ImageView>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dialogArt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/article"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/light_green"
                    android:textSize="14sp">

                </TextView>

                <TextView
                    android:id="@+id/dialogTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/light_green"
                    android:textSize="14sp">

                </TextView>

                <TextView
                    android:id="@+id/dialogCapacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/capacity"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/light_green"
                    android:textSize="14sp">

                </TextView>

                <TextView
                    android:id="@+id/dialogCorolla"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/type_of_corolla"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/light_green"
                    android:textSize="14sp">

                </TextView>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addToBasket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp"
                android:text="@string/add_to_basket"
                android:textSize="14sp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>

